edit: changed height of .card-img-top to use object fit to prevent distortion

--- a/bookworm/static/css/style.css
+++ b/bookworm/static/css/style.css
@@ -122,7 +122,7 @@ h5, h6 {
 }
 
 .card-img-top {
-    height: 300px;
+    object-fit: contain;
 }
 
 .card-footer {
